@@ -61,6 +61,7 @@ public final class SentenceFactory {
         registerParser("ZDA", ZDAParser.class);
         // Water
         registerParser("DBT", DBTParser.class);
+        registerParser("DPT", DBTParser.class);
     }
 
     /**
@@ -135,6 +136,21 @@ public final class SentenceFactory {
         }
 
         parsers.put(type, parser);
+    }
+    
+    /**
+     * Unregisters a parser class, regardless of sentence type(s) it is registered for.
+     * 
+     * @param parser Parser implementation class for <code>type</code>.
+     * @see #registerParser(String, Class)
+     */
+    public void unregisterParser(Class<? extends SentenceParser> parser) {
+    	for(String key : parsers.keySet()) {
+    		if(parsers.get(key) == parser) {
+    			parsers.remove(key);
+    			break;
+    		}
+    	}
     }
 
     /**
